<resources>
    <string name="app_name">SubmissionStoryApp_Akhir</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_email">Email Cannot be Empty</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_length_6">Must be More than 6</string>
    <string name="maps">Maps</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="gambar">gambar</string>
    <string name="text_sample">text sample</string>
    <string name="text_date">00-00-0000</string>
    <string name="retry">coba lagi</string>
    <string name="upload_image">Upload Image</string>
    <string name="camera">Camera</string>
    <string name="input_text_here">input text here</string>
    <string name="upload_story">Upload Story</string>
    <string name="image_display">image display</string>
    <string name="name_text">Name text</string>
    <string name="link_register">Register</string>
    <string name="login_text_button">Login</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="message_title_login">Join with us</string>
    <string name="title_welcome_page">Selamat datang</string>
    <string name="loading_desc">loading deskripsi</string>
    <string name="story_list_desc">Story list deskripsi</string>
    <string name="add_button_desc">tombol tambah deskripsi</string>
    <string name="join_withus">Join with us</string>
    <string name="nama">name</string>
    <string name="signup_text">Register</string>
    <string name="already_account">Alreade have an account?</string>
    <string name="login_disini">Login here</string>
    <string name="choose_img">Choose image</string>
    <string name="no_location">no location</string>
    <string name="no_file_yet">no file yet</string>
    <string name="no_permission_camera">no permission camera</string>
    <string name="GPS_off">GPS of</string>
    <string name="photo_fail">photo failed</string>
    <string name="camera_fail">camera faile</string>
    <string name="no_permission_location">no  permission location</string>
    <string name="curr_location">current locatin</string>
    <string name="second_ago">second ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="message_welcome_page">Welcome to Dicoding</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="message_logout">Are you sure want to logout?</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
</resources>