<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_row_story"
    android:layout_margin="3dp"

    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"

            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="8dp"
            android:text="Story Name"
            android:textColor="@color/black"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_marginTop="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@color/grey"
            android:contentDescription="@string/gambar"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"

            />
        <TextView
            android:id="@+id/textdescription"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sample"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview"/>

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textStyle="italic"
            android:textSize="10dp"
            android:text="@string/text_date"
            app:layout_constraintTop_toBottomOf="@id/textdescription"
            app:layout_constraintStart_toStartOf="@id/textdescription"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>